--- a/src/index.css
+++ b/src/index.css
@@ -115,5 +115,27 @@ header nav ul li a:hover {
   background-position: 80%;
 
 }
-
 /* Hero Style End */
+/* hero-cta start */
+.hero-cta {
+  width: 35%;
+  text-align: center;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #0e5932;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.hero-cta p {
+  font-size: 25px;
+  color: #328c3e;
+}
+
+/* hero-cta end */
