--- a/src/index.css
+++ b/src/index.css
@@ -137,5 +137,42 @@ header nav ul li a:hover {
   font-size: 25px;
   color: #328c3e;
 }
-
 /* hero-cta end */
+
+/*Intro*/
+.intro p {
+  line-height: 1.7;
+  color: #0e5928;
+  width: 80%;
+  font-size: 20px;
+  margin: 0 auto;
+}
+
+.intro-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.intro-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+
+.intro-img img {
+  max-width: 100%;
+  height: auto;
+  margin-left: 5px;
+}
+
+.intro-text {
+  flex: 12;
+}
+
+.intro-text p {
+  color: #358c32;
+  font-size: 18px;
+}
+
+/*end intro*/
