--- a/src/index.css
+++ b/src/index.css
@@ -176,3 +176,117 @@ header nav ul li a:hover {
 }
 
 /*end intro*/
+
+/* REACH OUT STYLES START */
+#reach-out {
+  /* margin-top: 5px; */
+  background: #7fd5c6;
+}
+
+#reach-out h2 {
+  color: #0e5918;
+}
+
+.contact h2 {
+  color: #F2E3D5;
+}
+
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-form {
+  padding-right: 10%;
+}
+
+.contact-form button:hover {
+  color: #F2E3D5;
+  background: #39b25b;
+}
+
+.contact-form input,
+.contact-form textarea {
+  border: 1px solid #027638;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #027636;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
+
+}
+
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #F2E3D5;
+  color: #027638;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 25px;
+  border-radius: 10px;
+
+
+
+}
+
+.contact-info>* {
+  flex: 1;
+  margin: 15px;
+}
+
+
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+
+}
+
+.contact-info h3 {
+  color: #0e592d;
+  font-size: 32px;
+}
+
+.contact-info p,
+.contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 25px;
+  font-style: normal;
+
+
+}
+
+#contact-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+.contact-info a {
+  color: #0e592d;
+  display: inline;
+}
+
+.contact-info a:hover {
+  color: #ACF2E5;
+  transition: .5s ease;
+}
+
+/*end "Contact me" styles*/
