--- a/src/index.css
+++ b/src/index.css
@@ -290,3 +290,99 @@ header nav ul li a:hover {
 }
 
 /*end "Contact me" styles*/
+
+/*Start Jobs section*/
+
+.jobs {
+  background: #0e592d;
+
+}
+
+
+.job {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #D5F2EA;
+}
+
+
+.job:nth-child(even) {
+  border-bottom: 1px solid #D5F2EA;
+}
+
+.job:last-child {
+  border-bottom: none;
+}
+
+.job-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #75bf81;
+}
+
+
+.job-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.job-img {
+  flex: 1 12%;
+  margin-right: 250px;
+  opacity: 0.5;
+  filter: alpha(opacity=40);
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
+
+
+
+}
+
+.job-img img {
+  max-width: 200%;
+  max-height: 100%;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+.job-img:hover {
+  opacity: 1.0;
+  /*    transition: .5s ease;*/
+  filter: alpha(opacity=100);
+  transform: scale(1.01);
+}
+
+.job-img img:hover {
+  /*    transition: .5s ease-in-out;*/
+  border: 5px solid #acf2c1;
+  transform: scale(1.1);
+}
+
+.job-img img:hover::after {
+  transition: .5s ease;
+
+}
+
+.job-text {
+  flex: 12;
+}
+
+.job-text p {
+  color: #D5F2EA;
+  font-size: 18px;
+}
+
+/*End Jobs section*/
