--- a/src/index.css
+++ b/src/index.css
@@ -499,3 +499,64 @@ header nav ul li a:hover {
 }
 
 /*End resume section*/
+
+/* start styles to <footer> */
+footer {
+  background: #D5F2EA;
+  font-weight: bold;
+  width: 100%;
+  height: 100px;
+  position: sticky;
+  bottom: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+
+}
+
+footer h2 {
+
+  color: #75bf83;
+  font-size: 15px;
+  margin: 0;
+}
+
+footer p {
+  color: #75bf8b;
+  font-size: 15px;
+  margin: 0;
+  text-align: center;
+
+}
+
+footer div {
+
+  line-height: 1.5;
+  /* text-align: right; */
+}
+
+footer a {
+  color: #75bf8b;
+}
+
+footer a:hover {
+  color: #328c48;
+  transition: .5s ease;
+}
+
+.logo {
+  cursor: pointer;
+  list-style: none;
+  font-size: 40px;
+  color: #10590e;
+  display: inline-block;
+}
+
+.logo:hover {
+  color: #328c45;
+  opacity: 0.5;
+  transition: .5s ease;
+}
+
+/* end styles to <footer> */
