added some extra styling

--- a/src/index.css
+++ b/src/index.css
@@ -560,3 +560,172 @@ footer a:hover {
 }
 
 /* end styles to <footer> */
+
+/* extra titles stylings */
+.section-title {
+  font-size: 48px;
+  color: #75bf78;
+  border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+}
+
+.primary-border {
+  border-color: #0e5921;
+}
+
+.secondary-border {
+  border-color: #d5f2df;
+}
+
+label {
+  font-size: 25px;
+}
+
+/*Extra styling*/
+.flex-row {
+  display: flex;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+
+@media screen and (max-width: 980px) {
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+
+  }
+
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  header nav ul li a {
+    font-size: 20px;
+  }
+
+  footer h2,
+  footer div,
+  footer p {
+    text-align: center;
+    width: 100%;
+  }
+
+  .hero-cta {
+    width: 100%;
+  }
+
+  .hero-cta {
+    text-align: center;
+  }
+
+  .section-title {
+    width: 80%;
+  }
+
+
+  .contact-info {
+    flex: 1 100%;
+  }
+
+  #contact-list {
+    display: block;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  /* section {
+    padding: 30px 15px;
+  } */
+
+  .job h3 {
+    flex: 1 100%;
+    text-align: center;
+  }
+
+  .job-info {
+    flex: 2 100%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .job-img,
+  .intro-img {
+    flex: 0 32%;
+    margin-right: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+
+  .job-img {
+    margin-right: 100px;
+  }
+
+  .job-text {
+    flex: 100%;
+  }
+
+  #contact-list {
+    display: block;
+    justify-content: space-around;
+    flex-wrap: wrap;
+
+  }
+}
+
+@media screen and (max-width: 575px) {
+
+  .section-title {
+    width: 95%;
+  }
+
+  .intro p,
+  .download-intro p {
+    width: 100%;
+    padding: 30px 15px;
+  }
+
+  .job-img {
+    margin-right: 100px;
+  }
+
+  .contact-info {
+    text-align: center;
+
+  }
+
+  .contact-info li {
+    font-size: 25px;
+    justify-content: space-between;
+
+
+  }
+
+  #contact-list {
+    font-size: 25px;
+    display: block;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+    margin-right: 120px;
+
+  }
+
+  .contact-info>* {
+    flex: 0 100%;
+  }
+}
